--- a/Websites.html
+++ b/Websites.html
@@ -7,7 +7,8 @@
     <body>
         <div>
         <h1>liking turtles in one easy step</h1>
-        <button type="button" onclick="alert('see? it\'s easy')">1 like them!</button>
+        <p>step one</p>
+        <button type="button" onclick="alert('see? it\'s easy')">like them!</button>
         </div>
     
     
