--- a/Websites.html
+++ b/Websites.html
@@ -12,6 +12,6 @@
         <button type="button" onclick="switchpicture()">like them!</button>
         </div>
   <div class= "bgimg" id="switch"></div>
-  <p>the turtles are the ones who got togather and biult all of the wonders of the world</p>
+  <p>the turtles are the ones who got together and built all of the Wonders of the World</p>
 </body>
 </html>
