--- a/Websites.html
+++ b/Websites.html
@@ -12,7 +12,7 @@
         <button type="button" onclick="switchpicture()">like them!</button>
         </div>
         <div class= "bgimg" id="switch"></div>
-        
+        <p>click again to replay</p>
         
   </body>
 </html>
