--- a/Websites.html
+++ b/Websites.html
@@ -9,10 +9,9 @@
         <div class= "heading">
         <h1>liking turtles in one easy step</h1>
         <p>step one</p>
-        <button type="button" onclick="switchpicture()">like them!</button>
+        <button type="button" id="switchtext" onclick="switchpicture()">like them!</button>
         </div>
         <div class= "bgimg" id="switch"></div>
-        <p>click again to replay</p>
         
   </body>
 </html>
