--- a/funstuff.html
+++ b/funstuff.html
@@ -4,7 +4,7 @@
         <meta name=description value="shoot pkias right in the head!">
         <meta name="author" value="Dad">
         <title>shoot a pika</title>
-        <link rel="stylesheet" type="text/css" href="CSS-1.css"></link>
+        <link rel="stylesheet" type="text/css" href="CSS.css"></link>
         <script src="JavaScript-1.js"></script>
     </head>
     <body>
